# anansi

./: .gitignore  CODE_OF_CONDUCT.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  pyproject.toml
anansi/: __main__.py  security.py
anansi/fetchers/: base.py  browser.py  http.py
anansi/mcp_server/: server.py
anansi/spider/: crawler.py
tests/: test_domain_scope.py  test_mcp_tools.py  test_robustness_improvements.py
