[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anansi-scraper"
version = "0.1.0"
description = "Anansi — adaptive web scraping framework that learns from website changes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["scraping", "crawling", "web", "adaptive", "playwright", "mcp"]
authors = [{ name = "Matt Dowis" }]

dependencies = [
    # Upper bounds limit the blast radius of a future malicious / broken
    # release of any network-facing or parser dependency. See SECURITY.md
    # for the supply-chain rationale.
    "httpx[http2]>=0.27,<1",
    "playwright>=1.44,<2",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<7",
    "aiosqlite>=0.20,<1",
    "mcp[cli]>=1.3,<2",
    "pydantic>=2.0,<3",
    "tenacity>=8.0,<10",
    "cssselect>=1.2,<2",
    "rich>=13.0,<15",
    "anyio>=4.0,<5",
    "markdownify>=0.13,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-mock>=3.12,<4",
    "respx>=0.21,<1",
]
tls = [
    "curl-cffi>=0.6,<1",
]
openai = [
    "openai>=1.0",
    "openai-agents>=0.0.3",
]

[project.scripts]
anansi = "anansi.__main__:main"
anansi-mcp = "anansi.mcp_server.server:run"

[tool.hatch.build.targets.wheel]
packages = ["anansi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
